propellor (5.10.3) UNRELEASED; urgency=medium

  * Fix display of concurrent output from processes when using
    Propellor.Property.Conductor.
    (Reversion introduced in version 5.5.0.)

 -- Joey Hess <id@joeyh.name>  Fri, 05 Jun 2020 11:26:21 -0400

propellor (5.10.2) unstable; urgency=medium

  * Fix build with ghc 8.6.3.
    Thanks, Robin Munn
  * Bootstrap: Fix typo in Arch Linux dependencies.
    Thanks, Robin Munn
  * Bootstrap: Add haskell-type-errors package on Arch Linux.
    Thanks, Robin Munn
  * Apt.buildDepIn: Run build-dep command in a temporary directory,
    since it may sometimes not clean up all the files it creates.

 -- Joey Hess <id@joeyh.name>  Fri, 01 May 2020 16:47:31 -0400

propellor (5.10.1) unstable; urgency=medium

  [ Joey Hess ]
  * Localdir.hasOriginUrl: Depend on Git.installed.
  * Localdir.hasOriginUrl: Type changed from UnixLike to DebianLike
    because Git.installed is not implemented for other unixes.
    (API change)
  * Changed the ChrootBootstrapper type class's buildchroot method
    to take a Info parameter, instead of Maybe System.
    (The System can be extracted from the Info.)
    (API change)

  [ Sean Whitton ]
  * Chroot.{de,}bootstrapped uses the chroot's configured apt proxy and
    mirror, if these exist, when debootstrapping the chroot.
  * Rename Sbuild.useHostProxy -> Chroot.useHostProxy. (API change)

 -- Joey Hess <id@joeyh.name>  Fri, 15 Nov 2019 13:26:19 -0400

propellor (5.9.1) unstable; urgency=medium

  * Apt: Debian has changed the name of the suite for testing security updates
    from testing to testing-security.
  * Apt: Also the suite for stable releases from bullseye on will be
    suffixed with "-security".
  * Apt.update: Pass --allow-releaseinfo-change when updating Unstable
    or Testing, so that code name changes that happen in those suites
    during a stable release don't prevent updating the rolling suites.
  * Systemd.machined: Fix a bug that caused the systemd-container package